# ChangeLog for dev-perl/SDL
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/ChangeLog,v 1.1 2012/01/21 21:00:26 ssuominen Exp $

*SDL-2.536 (21 Jan 2012)

  21 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> +SDL-2.536.ebuild:
  Version bump wrt #356535 by Satoshi Hayazaki. Rename dev-perl/sdl-perl
  to dev-perl/SDL.

  20 Jan 2010; Torsten Veller <tove@gentoo.org> sdl-perl-2.2.6.ebuild:
  Remove YAML from Build.PL (#301442)

  11 Jan 2010; Raúl Porcel <armin76@gentoo.org> sdl-perl-2.2.6.ebuild:
  alpha/ia64/sparc stable wrt #296485

  05 Jan 2010; Joseph Jezak <josejx@gentoo.org> sdl-perl-2.2.6.ebuild:
  Marked ppc stable for bug #296485.

  23 Dec 2009; Jeroen Roovers <jer@gentoo.org> sdl-perl-2.2.6.ebuild:
  Stable for HPPA (bug #296485).

  16 Dec 2009; Markus Meier <maekke@gentoo.org> sdl-perl-2.2.6.ebuild:
  amd64/x86 stable, bug #296485

  07 Dec 2009; Torsten Veller <tove@gentoo.org> -sdl-perl-2.1.3-r3.ebuild,
  -files/sdl-perl-2.1.3-gfxPie.patch, -files/sdl-2.1.3.build.patch:
  Cleanup

  02 Dec 2009; Raúl Porcel <armin76@gentoo.org> sdl-perl-2.2.2.7.ebuild:
  alpha/ia64/sparc stable wrt #291230

  14 Nov 2009; Jeroen Roovers <jer@gentoo.org> sdl-perl-2.2.2.7.ebuild:
  Stable for HPPA (bug #291230).

*sdl-perl-2.2.6 (10 Nov 2009)

  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +sdl-perl-2.2.6.ebuild:
  Version bump via perl-bump experimental tool.

  02 Nov 2009; Markus Meier <maekke@gentoo.org> sdl-perl-2.2.2.7.ebuild:
  amd64/x86 stable, bug #291230

  01 Nov 2009; nixnut <nixnut@gentoo.org> sdl-perl-2.2.2.7.ebuild:
  ppc stable #291230

  07 Sep 2009; Torsten Veller <tove@gentoo.org> -sdl-perl-2.2.0.ebuild,
  -sdl-perl-2.2.1.8.ebuild:
  Cleanup

*sdl-perl-2.2.2.7 (31 Aug 2009)

  31 Aug 2009; Torsten Veller <tove@gentoo.org> +sdl-perl-2.2.2.7.ebuild:
  Version bump

*sdl-perl-2.2.1.8 (25 Aug 2009)

  25 Aug 2009; Robin H. Johnson <robbat2@gentoo.org>