@@ -1,6 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST SDL-2.536.tar.gz 2485524 RMD160 43ad9f55cad8ca1cd988a7a9b535e432e6928459 SHA1 27c19c2f3e0d254c1c03865993fc29aa9a88d028 SHA256 f702ce2ee513f1895c2ede778d3719988e96b4a2aed52fa00887a420c8d6e900
 DIST SDL_Perl-v2.2.6.tar.gz 913498 RMD160 1a6d779c05d97c691e9a3673e83ca650142a0d0a SHA1 f4a0e630374ab0277071351094ce91faf9c366e3 SHA256 a3fbf0213855629fefab9fa3431053ad646e175e9daa8e9796be1d84a5c32061
 EBUILD SDL-2.2.6.ebuild 1063 RMD160 b6a2fb7b8fa582cfa0e8af57fea1b6eafda283b7 SHA1 19e08343ababc4c350a8cfcf366d5ee53b91d0ad SHA256 bec9dfe85a4b1cf0e0eace7e8cbfe6c5cdfc3ba18abde6f583a88ade806677be
-EBUILD SDL-2.536.ebuild 1118 RMD160 3fb03a7d77dc83d8e7ed526eadf618afd0c216de SHA1 83760d100b655c22ac5fea6c20bb7d332b81ab11 SHA256 88daed97a2a5d97769c6f0788d7e3247a4466ce9b4de53ec4c8a0ae7233cafcb
-MISC ChangeLog 10725 RMD160 09411fe59f2d4b1b2c4deccc68f80df5bfab5e16 SHA1 600d5714dae71c2df22a28163e607e1db4e55f27 SHA256 1fe965d769a22660460b3fc550ddd77a0cfbad564fe3dc82046f463adf287a12
+EBUILD SDL-2.536.ebuild 1073 RMD160 9b029cc5f087b81f796a2b0b6e6b5174fb0c7343 SHA1 9dba808efebd653bcec7bf4e6f1dafa834e6150a SHA256 94c9896dce4f7be2ac8adcca36a97b4a6df39ca815371692e6e3eb23bdb09938
+MISC ChangeLog 10851 RMD160 c63cf358f46c2607ccea9b66750eb0bcfa6ae01f SHA1 5d970cd6753cea94a767ba0b05daaf4507a5bdd0 SHA256 95f7795895503139d79727a6a6baeacf89f7f754fd80d4fe47f0e618e8835673
 MISC metadata.xml 284 RMD160 4b633d2fdfd525ae08dd7938c9ae604582d6c8b4 SHA1 6cb74e33dba68a1e8bac735d9effbc25d7e27244 SHA256 a2beebdaaef1ee83bf47502e9b6e180ae6ea4cb0b6758498a1e7d5d971b1c436
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQEcBAEBAgAGBQJPHKMIAAoJEEdUh39IaPFNKawH/i0FFcLUVz9jacuAClS91Rr8
+qIT1TDIafGidzXYx1yuUyROO6OC8O+4PkkQ6sxP9IPzaV4koDBb5o1beULc8k+Mg
+90kIJBFwLCx+y7ItISylY3brAIanyGz7XX914kmtcLLU8NRShbDZevmMn0+pZg7H
+HTUT8WL/DSQU48nG/LYNKEBcucBJFJ6D6C1RpwF/Ea2pHIOHKHwJTYwM4lZyQEBs
+E6KyVr2O8iiirjggfP14BjOCjtA4J5l4MSmuTGzYAW0ryaK1CsMdF+f0voE04Gek
+VuIqpjvTGhGLwQn4biw9+Zk8SZH+6WCj2IsAEEXa7munCGcy8wLWvf9nKunj1yU=
+=wsxG
+-----END PGP SIGNATURE-----
