@@ -16,27 +16,27 @@ AUX cupsd.init.d 402 RMD160 1b132354d01ad2ecebbe5238b09dfa3cb9391d43 SHA1 ea4817
 AUX pdftops-1.20.gentoo 10412 RMD160 16e229662c47e03af1d1f4cb5764a76d17a66642 SHA1 6afb8a655b6ff013a2c8c8cbfb615ba1e561503b SHA256 ac5fa01ca776d75bd7cef62eef9f6b0c3945ee87e8950b40ca9f9f3ff46a16c1
 DIST cups-1.4.8-source.tar.bz2 4547162 RMD160 ee80e8d0b56dc0e2edf2a9aa9a43c4b92619f741 SHA1 9167f556e78e0bc075f1eb2f695d79cc1f334007 SHA256 6bd27e1213c139ed0bbadc5c29f97cf1e8f7f8f5b0bb29b227ecaff32aafa9a6
 DIST cups-1.5.0-source.tar.bz2 4090210 RMD160 e7be9b6b44428561609c59abaea8fa31a11aefff SHA1 628f549867751e373fc20c7558fec422f9eb942b SHA256 c6f99b68a558f4d626e9a5076d664f38e9925715dc541b07f0328c9aeb02ec33
-EBUILD cups-1.4.8-r1.ebuild 7247 RMD160 5dad178dde209a300c95eff90f3cdcf354029ca4 SHA1 529fbc8c02821448d79e6ba5d8f1ef6a9db960de SHA256 33b5320844e2185725446fc18ada3109d03fcd197f26eec9e94d870dbae2fdd4
+EBUILD cups-1.4.8-r1.ebuild 7248 RMD160 502e7a8196c3e0212027fa6a788f77cac24b0456 SHA1 bb86c0acee0dd8f7356fc3f369d50eacfb876404 SHA256 757f7b16f643c75a23743415ce0c35cd3a6b09cf1d349405e000841c447ca7ce
 EBUILD cups-1.4.8-r22.ebuild 8493 RMD160 39b39b32ddc4bead92546180f11f377b9bdbca01 SHA1 6e5397d498b9ae8e66e74d9a1253b44ac79d77e1 SHA256 5eae14cd692f2639a69c518bbd381b04cc7fdfdca067c944bd90181212c5b387
-EBUILD cups-1.4.8-r23.ebuild 8858 RMD160 70b93c0b6b047c4cbb5b430db1a39774f0a480c8 SHA1 9f37004da1d8c347bf23e6871a1f187cfaba5c6c SHA256 09488eadea98ecdea281815850a43ffe43caee38852fbc61639fe6bd4a68e801
+EBUILD cups-1.4.8-r23.ebuild 8858 RMD160 4b7a4c354ca14d9a10f0a6ab19ee798c2d24c305 SHA1 38c5604b7f076b3da63f799ead73dd60d51867d2 SHA256 e6eae6754e8db8ffefd7194f272f0bebf5d2eb3bd23929ef76cb294e2f6739ac
 EBUILD cups-1.5.0-r2.ebuild 6501 RMD160 0137c7b531696e83d0ce536f0681321d6f9d4726 SHA1 46e87de85a2d705428ff75d2063cc274e48e753d SHA256 64bdb26eea84190d450f9d0228b46581b2024a9a9af4c061f96821bb9aec43f4
-EBUILD cups-1.5.0-r3.ebuild 6866 RMD160 800306b35bdb0319f2257d98b2e1f737b4c3dfd0 SHA1 d3d66eb78855f45abddb15098ba7d1d0d3b44f3d SHA256 a8f2c76b41c537fd2d006f063c7b17c35679a7cf4d0076b34988c90420fb80da
-MISC ChangeLog 67031 RMD160 dae37b78a1ca6ed013ab844d8c79b3c7c4609208 SHA1 c898f30b67f1f8f31b418d012fcb963458276751 SHA256 a01688c2aced33741e203276b68601cf673b4847b83c231f83b0505d69275a6d
+EBUILD cups-1.5.0-r3.ebuild 6866 RMD160 1df942586720d7a1f7e6889e9efc0d1375d7121a SHA1 92fc36fab37fd7e2a4bc4446f03bc601d1665ea8 SHA256 dfb8ad000e3309d0ef510de3a8011cb22f888820cd043200b06362829cbc2a7f
+MISC ChangeLog 67186 RMD160 ba0c3fa1e0e7a1d88e0b16a30acb590770d2226e SHA1 11c031acdea154c20742f6514436de7f144ecf7c SHA256 98ff0ddc58002851d2280f54137a5bcceb0e73c973f326fd73422c1c6deb1de6
 MISC metadata.xml 691 RMD160 2a77a55b3ba142202c16f7c9e5710107cdd7565f SHA1 0fedf6ebd837708cd218a4a03741a20091714950 SHA256 3d89754273130856a7433fb325a132b07b86f7c0391284ab2c7dc8a2fa46fec7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPE1ZmAAoJENwGBM22xffeWuwP/3elxkOLy6CyFbLmR5Fn9jdA
-WnoCpr9GG/cpv2YIIELQ+TWbB86e9QP9Ob5pPwsV3B05GRnzYK+KyoOmY3afhGkn
-SamWgfy6U5ek2amMxmZ6Akv3jPxKGFkac4q1apuXClqjQIx1ECQYc88T9pSIcgQt
-c6pEf8iwWMrMjqukARATNS7w1dakSwjeJUVdWPHt1u83Zwy+SzhXGvWfqQxuyJul
-2Ql0euDTf7xRHn9W+j0k3dumXZ3cjAsocBnuu7jER5zJDVJocfBt5Y4eykY53osU
-FtZYPyoHhx/+alM49cPMqyDlUf6C9N5xJOvkB7g1rX15u0W9ZNj6/KbTJ6XI4F9C
-AH/PIEKklLcxGn1fQWRJn/fIroTdBlFpHvE9+Ra7bbZZZCMFEwRI8rge2J1XiEpY
-e6jWupmSoJfp4CH17na4+RDE2wis1MA+Cm5CfdXr6sgXNQsNu+ZwlGiwlmLVL7aL
-uWN3pPWlPKttUBb0ZrY9czXQga+kITojcRgFTHoUQN1Sn5WIQEwfcR2n37f2Kq8f
-dJ4HfZdhnecYYF6cPDmiH1vATBRSWnmVQ7DTBjBcaJGy/dJ1bk33P/SyoJfsSLt2
-6G5tLcWWm2LnakiXxElmCafK/wsqSAjbayekPs+WKGUtw97lQv0T89YY1QHkUAvN
-xwIoY2dFu6ljwXRHkdhY
-=fN7f
+iQIcBAEBCgAGBQJPHERRAAoJENwGBM22xffeVv4QAKLLjokl9HjG17U+vV4bSl13
+SmrDb+rNYY3ejfo0daeKUQ9viaaWVu60U2JXx4v4YiCSRxrne174wuR4VSYCA9uz
+LhQKP+TqRY/YOJJPBhq7CwkHkkZevoZl8hOP4E4JqLrf6ZVB9coFLl30EB2m5ih8
+14ph5KpWonDYh+4dTyKbK+Sez6gJMB82WxcPvcvxUhGrFHIo3DgN6+EJcywOi3WC
+b8cc2FSIeZEkxoB5qRTP+eH52wwdPlznxEgbEvLEd0cGKZNZKBxrBa7yHO274B9U
+9zm33xJpkNpA1WPmbmNWJl1trTj5/VZW3xGb93bsWAmv9Rz+rvchB6uI48OCdSJ+
+3rcpAdQiN4oJxDMeHkCZOn+jDjBR13F6JYjl7uPCiEk9DZXT/h50agC9dfvOv65Q
+G+ZJ8U7qe7Qus8nF6UJQOD+O1BGH6Nxi1PmW9MHv8AbX2qmnI/gH/pp05BKwqKVf
+Fqf5FKabHYANyO7vZvlm/ckpnKZOTugFv/IJ1/ou6SR0TYdtm1xOntQi5cC8flD3
+e1jV7yltS5YqnAb8QBYq/aQl2FBM9sw0v/e68L9jYH0MuOvrJNZ0O7MLEcBarPIM
+ypkKxWgm56xp2RJvI6iYpwAkvslsCMEE+I9ZESDnLbCzDe8c+uUMsMp/Lm9BDIE2
+sL4DF9pnz6iMKRLX8cNr
+=7XFQ
 -----END PGP SIGNATURE-----
