@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/cups-1.5.0-r3.ebuild,v 1.3 2012/01/15 22:41:37 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/cups-1.5.0-r3.ebuild,v 1.4 2012/01/22 17:14:51 dilfridge Exp $
 
 #
 # See http://git.overlays.gentoo.org/gitweb/?p=dev/dilfridge.git;a=blob;f=net-print/cups/notes.txt;hb=HEAD
@@ -39,7 +39,6 @@ RDEPEND="
 		)
 	)
 	dbus? ( sys-apps/dbus )
-	filters? ( net-print/foomatic-filters )
 	java? ( >=virtual/jre-1.6 )
 	jpeg? ( virtual/jpeg:0 )
 	kerberos? ( virtual/krb5 )
@@ -70,6 +69,7 @@ DEPEND="${RDEPEND}
 PDEPEND="
 	app-text/ghostscript-gpl[cups]
 	>=app-text/poppler-0.12.3-r3[utils]
+	filters? ( net-print/foomatic-filters )
 "
 
 # upstream includes an interactive test which is a nono for gentoo.
