@@ -1,6 +1,10 @@
 # ChangeLog for net-print/cups
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.441 2012/01/15 22:41:37 dilfridge Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.442 2012/01/22 17:14:51 dilfridge Exp $
+
+  22 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.4.8-r1.ebuild,
+  cups-1.4.8-r23.ebuild, cups-1.5.0-r3.ebuild:
+  Break circular dependency
 
   15 Jan 2012; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.4.8-r1.ebuild,
   cups-1.4.8-r23.ebuild, cups-1.5.0-r3.ebuild, metadata.xml:
