@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/SDL
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/ChangeLog,v 1.1 2012/01/21 21:00:26 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/SDL/ChangeLog,v 1.2 2012/01/23 00:02:23 ssuominen Exp $
+
+  22 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> SDL-2.536.ebuild:
+  Restore SRC_TEST="do" because tests run fine here.
 
 *SDL-2.536 (21 Jan 2012)
 
